hotfix: travis-ci

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -274,6 +274,16 @@ crypto_libbitcoin_crypto_a_SOURCES = \
   crypto/yespower-bitzeny.c
 
 noinst_HEADERS = \
+  crypto/yespower/insecure_memzero.h \
+  crypto/yespower/sha256.c \
+  crypto/yespower/sha256.h \
+  crypto/yespower/sysendian.h \
+  crypto/yespower/yespower-opt.c \
+  crypto/yespower/yespower-platform.c \
+  crypto/yespower/yespower-ref.c \
+  crypto/yespower/yespower.h
+
+noinst_HEADERS = \
   crypto/yespower/insecure_memzero.h
 
 if EXPERIMENTAL_ASM
