replace GetHash with GetPoWHash & serialize input to yespower_tls()
KotoDevelopers/koto#18
bitzenyPlus/BitZenyPlus#43

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -100,7 +100,6 @@ BITCOIN_CORE_H = \
   core_memusage.h \
   cuckoocache.h \
   fs.h \
-  hashdb.h \
   httprpc.h \
   httpserver.h \
   indirectmap.h \
@@ -190,7 +189,6 @@ libbitcoin_server_a_SOURCES = \
   chain.cpp \
   checkpoints.cpp \
   consensus/tx_verify.cpp \
-  hashdb.cpp \
   httprpc.cpp \
   httpserver.cpp \
   init.cpp \
@@ -269,9 +267,8 @@ crypto_libbitcoin_crypto_a_SOURCES = \
   crypto/sha256.h \
   crypto/sha512.cpp \
   crypto/sha512.h \
-	crypto/yespower/sha256.c \
-  crypto/yespower/yespower-opt.c \
-  crypto/yespower-bitzeny.c
+  crypto/yespower/sha256.c \
+  crypto/yespower/yespower-opt.c
 
 noinst_HEADERS = \
   crypto/yespower/insecure_memzero.h \
